# 3DCurve

./: 3DCurve.py  CFurc_Argparse.py  CFurc_Colors.py  CFurc_DataManip.py  CFurc_FitFuncs.py  CFurc_OSManip.py  CFurc_Plot.py  CMakeLists.txt  CurvatureAndTorsion.py  Curve.cpp  CurveCFurc_3DCurve.py  CurveCFurc_CurvatureAndTorsion.py  ExploreDirectory.cpp  ExploreDirectory.h  Pipeline.cpp  Pipeline.h  README.md  VectorOperations.h
